EXPERIMENTALLY beginning to convert various source code files to C++ (.c to .cc); it will of course be a major undertaking to redesign the code so that it fits C++, but I think it will be worth it. (main.c => main.cc only so far.) Note: Release 0.4.6.1 will most likely be made from the code base as it was yesterday, plus perhaps some documentation updates. Adding configure options "--with-gui" and "--without-gui"; autodetection of gtkmm-2.4 >= 2.12.1. A binary "gxemul-gui" is hardlinked to "gxemul"; when started, it should (in the future) bring up a GUI version of GXemul. For now, it just displays a dummy GTK+ window.

--- a/gxemul-legacy/trunk/README
+++ b/gxemul-legacy/trunk/README
@@ -1,11 +1,10 @@
 
 
-          --------------------------------------------------------
-            Gavare's eXperimental Emulator   --   GXemul 0.4.6.1
-          --------------------------------------------------------
+            ------------------------------------------------------
+              Gavare's eXperimental Emulator   --   GXemul 0.5.0
+            ------------------------------------------------------
 
-
-Copyright (C) 2003-2007  Anders Gavare
+                    Copyright (C) 2003-2007  Anders Gavare
 
 
 
@@ -24,8 +23,8 @@ controllers, ethernet controllers, disk controllers, and serial port
 controllers.
 
 GXemul, including the dynamic translation system, is implemented in 
-portable C, which means that the emulator will run on practically any host 
-architecture.
+portable C/C++, which means that the emulator will run on practically any
+host architecture.
 
 The documentation lists the machines and guest operating systems that can 
 be regarded as "working" in GXemul. The best working guest operating 
@@ -78,7 +77,7 @@ Quick start
 To compile, type './configure' and then 'make'. This should work on most
 Unix-like systems. If it does not, then please mail me a bug report.
 
-You might want to experiment with various CC and CFLAGS environment
+You might want to experiment with various CC, CXX, and CFLAGS environment
 variable settings, to get optimum performance.
 
 If you are impatient, and want to try out running a guest operating system 
