*** empty log message ***

--- a/gxemul-legacy/trunk/README
+++ b/gxemul-legacy/trunk/README
@@ -1,5 +1,17 @@
 
 
+
+NOTE!!!
+
+GXemul 0.5.0 is under development.
+
+This README is preliminary and is subject to change.
+
+
+----------------------------------------------------
+
+
+
             ------------------------------------------------------
               Gavare's eXperimental Emulator   --   GXemul 0.5.0
             ------------------------------------------------------
