*** empty log message ***

--- a/gxemul-legacy/trunk/README
+++ b/gxemul-legacy/trunk/README
@@ -3,9 +3,9 @@
 
 NOTE!!!
 
-GXemul 0.5.0 is under development.
+GXemul 0.5.0 will _NOT_ be ready for a long time.
 
-This README is preliminary and is subject to change.
+This README is preliminary and is very much subject to change.
 
 
 ----------------------------------------------------
