--- a/gxmvcf/HISTORY
+++ b/gxmvcf/HISTORY
@@ -4,3 +4,5 @@ Changelog for GXmvcf:
 20080818	Skeleton: configure script, Makefile.skel files, src and doc
 		directory, Doxygen setup, unit test (no tests written yet).
 
+20080824	Continuing; Variables and Model Nodes (initialization/
+		construction, serialization, unit tests).
