NetBSD/hpcmips can now be installed and run using serial console (i.e. without -X), in addition to using the framebuffer.

--- a/gxemul/branches/gxemul-0.4.7/HISTORY
+++ b/gxemul/branches/gxemul-0.4.7/HISTORY
@@ -3806,3 +3806,6 @@ Changelog for GXemul:
 
 20090103	Merging fixes from the main trunk.
 20090122	Merging in fdiv.sss and fadd.dsd from the main trunk.
+20090123	NetBSD/hpcmips can now be installed and run using serial
+		console (i.e. without -X), in addition to using the
+		framebuffer.
