Preparing for release 0.4.7.2; updating the guest OS page for HelenOS 0.4.0.

--- a/gxemul/branches/gxemul-0.4.7/HISTORY
+++ b/gxemul/branches/gxemul-0.4.7/HISTORY
@@ -3811,3 +3811,5 @@ Changelog for GXemul:
 		framebuffer.
 
 ==============  RELEASE 0.4.7.1  ==============
+
+20090215	Updating the guest OS page for HelenOS 0.4.0.
