--- a/gxemul/trunk/HISTORY
+++ b/gxemul/trunk/HISTORY
@@ -3841,3 +3841,4 @@ Changelog for GXemul:
 20090214	Continuing on native code generation: beginning on register
 		allocation.
 20090302	Renaming IRNative* to IRBackend*.
+		Continuing on code generation.
