Hacking on piix4 a bit to attempt to please Linux/Malta; no success yet: interrupts are lost.

--- a/gxemul/branches/gxemul-0.4.7/HISTORY
+++ b/gxemul/branches/gxemul-0.4.7/HISTORY
@@ -3819,3 +3819,5 @@ Changelog for GXemul:
 		guest OS page.
 20090518	Changing the 8253 interrupt mechanism to assert interrupts
 		regardless of "mode" bits, causing Linux/Malta to get further.
+		Hacking on piix4 a bit to attempt to please Linux/Malta;
+		interrupts are lost.
