Documentation updates (NetBSD 5 etc).

--- a/gxemul/branches/gxemul-0.4.7/HISTORY
+++ b/gxemul/branches/gxemul-0.4.7/HISTORY
@@ -3823,3 +3823,4 @@ Changelog for GXemul:
 		interrupts are lost.
 20090610	Making configuration files work again! (Thanks to Wu Kan for
 		noticing this bug.)
+20090611	Documentation updates (NetBSD 5 etc).
