--- a/gxemul/trunk/HISTORY
+++ b/gxemul/trunk/HISTORY
@@ -4949,3 +4949,4 @@ Changelog for GXemul:
 20210209	Adding keyboard support to dev_luna88k.
 20210213	Implementing exception cases in 88K xmem_slow implementation.
 20210214	Implementing the fdiv.dss 88K instruction.
+20210215	Implementing the fsub.sss 88K instruction.
