--- a/gxemul/trunk/HISTORY
+++ b/gxemul/trunk/HISTORY
@@ -4952,3 +4952,6 @@ Changelog for GXemul:
 20210215	Implementing the fsub.sss 88K instruction.
 
 ==============  RELEASE 0.6.3  ==============
+
+20210215	Implementing the fadd.dss 88K instruction, and working a bit
+		more on the exception cases in the xmem instruction.
