--- a/gxemul/trunk/HISTORY
+++ b/gxemul/trunk/HISTORY
@@ -4956,3 +4956,5 @@ Changelog for GXemul:
 20210215	Implementing the fadd.dss 88K instruction, and working a bit
 		more on the exception cases in the xmem instruction.
 20210220	Implementing mouse emulation support for the LUNA88K machine.
+		Updating OpenBSD/sgi install instructions (6.5 -> 6.8),
+		and including a screenshot of X11 running.
