--- a/gxemul/trunk/HISTORY
+++ b/gxemul/trunk/HISTORY
@@ -4962,4 +4962,8 @@ Changelog for GXemul:
 		for available console input. (Found when using CTRL-C on Linux
 		to enter the debugger command line, and noticed that it was
 		spuriously broken.)
-20210222	Basic multiprocessor bootup of OpenBSD/luna88k now works.
+20210222	Basic multiprocessor bootup of OpenBSD/luna88k now works, but
+		it is slightly unstable.
+
+==============  RELEASE 0.6.3.1  ==============
+
