Adding a -L command line option for enabling tap networking without using configuration files. Also some debugmsg:ifying.

--- a/gxemul/trunk/HISTORY
+++ b/gxemul/trunk/HISTORY
@@ -4983,3 +4983,5 @@ Changelog for GXemul:
 20210310	All MIPS machines now register their devices as symbols (based
 		in kseg1, i.e. 0xffffffffa0000000).
 20210311	Making -T work better for MIPS, PPC, ARM, and SuperH.
+20210314	Adding a -L command line option for enabling tap networking
+		without using configuration files.
