--- a/gxemul/trunk/man/gxemul.1
+++ b/gxemul/trunk/man/gxemul.1
@@ -230,6 +230,8 @@ When booting from an ISO9660 filesystem, the emulator will try to boot
 using this file. (In some emulation modes, eg. DECstation, this name is passed 
 along to the boot program. Useful names are "bsd" for OpenBSD/pmax, 
 "vmunix" for Ultrix, or "vmsprite" for Sprite.)
+.It Fl L Ar tapdev
+Enable tap networking using device 'tapdev', on systems that support it.
 .It Fl M Ar m
 Emulate
 .Ar m
