Adding an empty RISC-V CPU skeleton [again].

--- a/gxemul/trunk/HISTORY
+++ b/gxemul/trunk/HISTORY
@@ -5016,3 +5016,4 @@ Changelog for GXemul:
 20210324	Adding support for 00 99 01 07 variant of luna88k a.out.
 20210325	The mb89352 SCSI controller uses its own subsystem for debug
 		messages.
+20210327	Adding an empty RISC-V CPU skeleton [again].
