Code for idling the host processor has been moved out from individual CPU implementations to the main emul loop. Only if all running CPUs in all machines are idling will the host CPU idle. Also, if the return value from usleep() indicates an aborted syscall (due to signal delivery), then a second usleep() call is attempted.

--- a/gxemul/trunk/HISTORY
+++ b/gxemul/trunk/HISTORY
@@ -5026,3 +5026,5 @@ Changelog for GXemul:
 		to boot from disk without asking for root and swap partitions.
 		Adding 'R' (upper-case) disk image prefix, as a shorthand for
 		creating temporary overlays.
+20210407	Code for idling the host processor has been moved out from
+		individual CPU implementations to the main emul loop.
