Porting over i960CA disassembly from the C++ framework.

--- a/gxemul/trunk/HISTORY
+++ b/gxemul/trunk/HISTORY
@@ -5041,3 +5041,4 @@ Changelog for GXemul:
 		the case of monochrome) were not drawn.
 20210410	Also check for X11R7 in the configure script, in addition
 		to X11R6.
+20210417	Porting over i960CA disassembly from the C++ framework.
