Assuming availabilty of __func__ (C99 standard).

--- a/gxemul/trunk/HISTORY
+++ b/gxemul/trunk/HISTORY
@@ -5044,3 +5044,4 @@ Changelog for GXemul:
 20210417	Porting over i960CA disassembly from the C++ framework.
 20210418	More i960 stuff, including re-adding the (so far dummy)
 		Cyclone VH machine.
+		Assuming availabilty of __func__ (C99 standard).
